--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
+
   <body>
     <header class="header">
       <div class="header__logo-box">
@@ -28,6 +29,20 @@
         <a class="btn btn--white btn--animated" href="#">Discover our tours</a>
       </div>
     </header>
+
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">Text</div>
+          <div class="col-1-of-2">Images</div>
+        </div>
+      </section>
+    </main>
 
     <!-- <section class="grid-test">
       <div class="row">
