--- a/index.html
+++ b/index.html
@@ -32,13 +32,32 @@
 
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
-          <div class="col-1-of-2">Text</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam
+              fugiat iusto sapiente maiores, autem laboriosam dolorum neque
+              facere tenetur ipsam omnis consequuntur iste voluptatibus cum quis
+              nulla magni delectus rem.
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui
+              consectetur hic porro dicta quaerat. Odit exercitationem nobis
+              amet itaque excepturi.
+            </p>
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
           <div class="col-1-of-2">Images</div>
         </div>
       </section>
