--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             <p class="paragraph">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Numquam
               fugiat iusto sapiente maiores, autem laboriosam dolorum neque
-              facere tenetur ipsam omnis consequuntur iste voluptatibus cum quis
-              nulla magni delectus rem.
+              facere tenetur ipsam omnis consequuntur.
             </p>
             <h3 class="heading-tertiary u-margin-bottom-small">
               Live adventures like you never have before
@@ -74,6 +73,57 @@
                 class="composition__photo composition__photo--p3"
               />
             </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feauture-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
+                quod ut voluptates.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet nature
+              </h3>
+              <p class="feauture-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, eaque.
+              </p>
+          </div>
+        </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feauture-box__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure
+                quas fugiat.
+              </p>
+          </div>
+        </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feauture-box__text">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Dignissimos id officia.
+              </p>
           </div>
         </div>
       </section>
