Add the tours section

--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
                 Meet nature
               </h3>
               <p class="feauture-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias, eaque.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestias, eaque.
               </p>
+            </div>
           </div>
-        </div>
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-map"></i>
@@ -112,8 +113,8 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iure
                 quas fugiat.
               </p>
+            </div>
           </div>
-        </div>
           <div class="col-1-of-4">
             <div class="feature-box">
               <i class="feature-box__icon icon-basic-heart"></i>
@@ -124,6 +125,39 @@
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                 Dignissimos id officia.
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most popular tours</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">front</div>
+              <div class="card__side card__side--back card__side--back-1">
+                back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">front</div>
+              <div class="card__side card__side--back card__side--back-2">
+                back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">front</div>
+              <div class="card__side card__side--back card__side--back-3">
+                back
+              </div>
+            </div>
           </div>
         </div>
       </section>
