--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                 <div class="u-margin-bottom-medium">
                   <h2 class="heading-secondary">Start booking now</h2>
                 </div>
-                <div class="form_group">
+                <div class="form__group">
                   <input
                     type="text"
                     class="form__input"
@@ -316,7 +316,7 @@
                   <label for="name" class="form__label">Full Name</label>
                 </div>
 
-                <div class="form_group">
+                <div class="form__group">
                   <input
                     type="email"
                     class="form__input"
