--- a/index.html
+++ b/index.html
@@ -445,6 +445,34 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Necessitatibus cupiditate non saepe consequuntur perspiciatis maxime
+            ex nulla! Voluptatibus, nobis? Aliquid commodi pariatur dolor
+            laboriosam reiciendis omnis, ratione tempore. Doloremque ea iusto
+            mollitia molestiae, aspernatur modi inventore minima neque ratione,
+            quo veritatis. Ea, reprehenderit? Adipisci maxime corrupti aperiam
+            mollitia soluta minus neque repellat, vitae ab in eaque unde amet
+            dolore qui officiis dignissimos.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
